--- a/main_system/templates/layout.html
+++ b/main_system/templates/layout.html
@@ -1,350 +1,132 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
-    <title>Operation Dashboard</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Unicraft Store</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.5/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <style>
-        @import url('https://fonts.googleapis.com/css?family=Roboto');
-
         body {
             font-family: 'Roboto', sans-serif;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            flex-direction: column;
-            min-height: 100vh;
         }
-
-        * {
-            margin: 0;
-            padding: 0;
+        .navbar {
+            background-color: white;
+            padding: 1rem;
         }
-
-        i {
-            margin-right: 10px;
-        }
-
-        .container-fluid {
-            flex: 1;
-        }
-
-        .navbar-brand.navbar-logo {
-            text-decoration: none;
-            color: white;
+        .navbar-brand {
             font-size: 24px;
             font-weight: bold;
-            font-family: Copperplate, Copperplate Gothic Light, fantasy;
         }
-
-
-        /* Navbar CSS */
-        .navbar-mainbg {
-            background-color: #5161ce;
-            padding: 0px;
-            width: 100%;
+        .search-bar {
+            width: 300px;
         }
-
-        #navbarSupportedContent {
-            overflow: hidden;
-            position: relative;
-        }
-
-        #navbarSupportedContent ul {
-            padding: 0px;
-            margin: 0px;
-        }
-
-        #navbarSupportedContent ul li a i {
-            margin-right: 10px;
-        }
-
-        #navbarSupportedContent li {
-            list-style-type: none;
-            float: left;
-        }
-
-        #navbarSupportedContent ul li a {
+        .cart-btn, .account-btn {
             font-size: 18px;
-            display: block;
-            padding: 20px 20px;
-            transition: all 0.4s ease-in-out;
-            position: relative;
-            color: #fff;
+            margin-left: 15px;
         }
-
-        #navbarSupportedContent>ul>li.active>a {
-            color: #5161ce;
-            background-color: transparent;
-            transition: all 0.4s ease-in-out;
-        }
-
-        #navbarSupportedContent a:not(:only-child):after {
-            content: "\f105";
-            position: absolute;
-            right: 20px;
-            top: 10px;
-            font-size: 14px;
-            font-family: "Font Awesome 5 Free";
-            display: inline-block;
-            padding-right: 3px;
-            vertical-align: middle;
-            font-weight: 900;
-            transition: 0.3s ease-in-out;
-        }
-
-        #navbarSupportedContent .active>a:not(:only-child):after {
-            transform: rotate(90deg);
-        }
-
-        .hori-selector {
-            display: inline-block;
-            position: absolute;
-            height: 100%;
-            top: 0px;
-            left: 0px;
-            transition: all 0.4s ease-in-out;
-            background-color: #fff;
-            border-top-left-radius: 15px;
-            border-top-right-radius: 15px;
-            margin-top: 10px;
-        }
-
-        .hori-selector .right,
-        .hori-selector .left {
-            position: absolute;
-            width: 25px;
-            height: 25px;
-            background-color: #fff;
-            bottom: 10px;
-        }
-
-        .hori-selector .right {
-            right: -25px;
-        }
-
-        .hori-selector .left {
-            left: -25px;
-        }
-
-        .hori-selector .right:before,
-        .hori-selector .left:before {
-            content: '';
-            position: absolute;
-            width: 50px;
-            height: 50px;
-            border-radius: 50%;
-            background-color: #5161ce;
-        }
-
-        .hori-selector .right:before {
-            bottom: 0;
-            right: -25px;
-        }
-
-        .hori-selector .left:before {
-            bottom: 0;
-            left: -25px;
-        }
-
-        /* Footer CSS */
-        footer {
-            background-color: rgba(81, 97, 206, 0.85);
-            color: #131313;
-            padding: 15px 0;
+        .footer {
+            background-color: #f8f9fa;
+            padding: 20px 0;
             text-align: center;
-        }
-
-        footer p {
-            margin: 0;
-        }
-
-        @media(min-width: 992px) {
-            .navbar-expand-custom {
-                -ms-flex-flow: row nowrap;
-                flex-flow: row nowrap;
-                -ms-flex-pack: start;
-                justify-content: flex-start;
-            }
-
-            .navbar-expand-custom .navbar-nav {
-                -ms-flex-direction: row;
-                flex-direction: row;
-            }
-
-            .navbar-expand-custom .navbar-toggler {
-                display: none;
-            }
-
-            .navbar-expand-custom .navbar-collapse {
-                display: -ms-flexbox!important;
-                display: flex!important;
-                -ms-flex-preferred-size: auto;
-                flex-basis: auto;
-            }
-        }
-
-        @media (max-width: 991px) {
-            #navbarSupportedContent ul li a {
-                padding: 12px 30px;
-            }
-
-            .hori-selector {
-                margin-top: 0px;
-                margin-left: 10px;
-                border-radius: 0;
-                border-top-left-radius: 25px;
-                border-bottom-left-radius: 25px;
-            }
-
-            .hori-selector .left,
-            .hori-selector .right {
-                right: 10px;
-            }
-
-            .hori-selector .left {
-                top: -25px;
-                left: auto;
-            }
-
-            .hori-selector .right {
-                bottom: -25px;
-            }
-
-            .hori-selector .left:before {
-                left: -25px;
-                top: -25px;
-            }
-
-            .hori-selector .right:before {
-                bottom: -25px;
-                left: -25px;
-            }
         }
     </style>
 </head>
-
-<body class="m-0">
-    <nav class="navbar navbar-expand-custom navbar-mainbg w-100">
-        &nbsp;&nbsp;&nbsp;&nbsp;
-        <a class="navbar-brand navbar-logo" href="/">Operation System</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <i class="fas fa-bars text-white"></i>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ml-auto">
-                <div class="hori-selector">
-                    <div class="left"></div>
-                    <div class="right"></div>
-                </div>
-                <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="/"><i class="fas fa-tachometer-alt"></i>Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/operation/department/list/"><i class="far fa-address-book"></i>Department List</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/operation/employee/list/"><i class="far fa-address-book"></i>Employee List</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/operation/vehicle/list/"><i class="far fa-calendar-alt"></i>Vehicle List</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/operation/customer/list/"><i class="far fa-address-book"></i>Customer List</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/operation/manager/page/"><i class="far fa-copy"></i>Manager Page</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/operation/coupon/list/"><i class="far fa-copy"></i>Coupon List</a>
-                </li>
-            </ul>
-        </div>
-
-        <!-- User Dropdown - Placed outside the collapsing navbar -->
-        <div class="dropdown ms-auto me-3">
-            <button class="btn btn-outline-light dropdown-toggle" type="button" id="userDropdown" data-bs-toggle="dropdown" aria-expanded="false">
-                <img src="https://via.placeholder.com/30" alt="User Avatar" class="rounded-circle me-2">
-                {{ request.session.info.name }}
+<body>
+    <nav class="navbar navbar-expand-lg navbar-light">
+        <div class="container">
+            <a class="navbar-brand" href="/">Unicraft</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
             </button>
-            <ul class="dropdown-menu" aria-labelledby="userDropdown">
-                <li><a class="dropdown-item" href="/operation/employee/profile/"><i class="bi bi-person-fill me-1"></i> Staff Profile</a></li>
-            </ul>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav me-auto">
+                    <li class="nav-item"><a class="nav-link" href="/home/">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/collection/">Collection</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/about/">About us</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/contact/">Contact</a></li>
+                </ul>
+                <form class="d-flex">
+                    <input class="form-control me-2 search-bar" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-dark" type="submit"><i class="fas fa-search"></i></button>
+                </form>
+                <a href="/cart" class="btn btn-outline-dark cart-btn"><i class="fas fa-shopping-cart"></i></a>
+                <div class="dropdown">
+                    <button class="btn btn-outline-dark dropdown-toggle account-btn" type="button" id="accountDropdown" data-bs-toggle="dropdown">
+                        <i class="fas fa-user"></i>
+                    </button>
+                    <ul class="dropdown-menu" aria-labelledby="accountDropdown">
+                        <li><a class="dropdown-item" href="/profile/">Profile</a></li>
+                        <li><a class="dropdown-item" href="/settings/">Settings</a></li>
+                        <li><a class="dropdown-item" href="/logout/">Log out</a></li>
+                    </ul>
+                </div>
+            </div>
         </div>
-
-        <a class="btn btn-outline-danger text-white me-3" href="/logout/">
-            <i class="bi bi-box-arrow-right me-1"></i> Logout
-        </a>
     </nav>
 
-    <div class="container-fluid my-4">
+    <div class="container my-4">
         {% block content %}{% endblock %}
     </div>
 
-    <footer>
+    <footer class="bg-dark text-light py-4">
         <div class="container">
-            <p>&copy; 2024 EcoRides. All rights reserved.</p>
+            <div class="row">
+                <!-- Subscribe Section -->
+                <div class="col-md-3">
+                    <h5>Subscribe now</h5>
+                    <p>Get the latest updates and exclusive offers.</p>
+                    <form method="POST" action="/subscribe/">
+                        {% csrf_token %}
+                        <input type="text" name="name" class="form-control mb-2" placeholder="Name" required>
+                        <input type="email" name="email" class="form-control mb-2" placeholder="Email" required>
+                        <button class="btn btn-light w-100" type="submit">Subscribe</button>
+                    </form>
+                </div>
+
+                <!-- Customer Service -->
+                <div class="col-md-3">
+                    <h5>Customer Service</h5>
+                    <ul class="list-unstyled">
+                        <li><a href="/customer-service/shipping-policy/" class="text-light">Shipping policy</a></li>
+                        <li><a href="/customer-service/faqs/" class="text-light">FAQs</a></li>
+                        <li><a href="/customer-service/contact/" class="text-light">Contact</a></li>
+                        <li><a href="/customer-service/shipping/" class="text-light">Shipping</a></li>
+                    </ul>
+                </div>
+
+                <!-- About Us -->
+                <div class="col-md-3">
+                    <h5>About us</h5>
+                    <ul class="list-unstyled">
+                        <li><a href="/about-us/physical-stores/" class="text-light">Physical stores</a></li>
+                        <li><a href="/about-us/our-story/" class="text-light">Our story</a></li>
+                        <li><a href="/about-us/features/" class="text-light">Features</a></li>
+                        <li><a href="/about-us/offers/" class="text-light">Offers</a></li>
+                    </ul>
+                    <div class="mt-3">
+                        <a href="#" class="text-light me-2"><i class="fab fa-twitter"></i></a>
+                        <a href="#" class="text-light me-2"><i class="fab fa-instagram"></i></a>
+                        <a href="#" class="text-light"><i class="fab fa-facebook"></i></a>
+                    </div>
+                </div>
+
+                <!-- Security & Privacy -->
+                <div class="col-md-3">
+                    <h5>Security and privacy</h5>
+                    <ul class="list-unstyled">
+                        <li><a href="/security/privacy-policy/" class="text-light">Privacy policy</a></li>
+                        <li><a href="/security/terms/" class="text-light">Terms and conditions</a></li>
+                        <li><a href="/security/secure-purchase/" class="text-light">Secure purchase</a></li>
+                        <li><a href="/security/quality-seal/" class="text-light">Quality seal</a></li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script>
-        // ---------Responsive-navbar-active-animation-----------
-        $(document).ready(function () {
-            function updateActiveLink() {
-                var path = window.location.pathname;
-                $('#navbarSupportedContent ul li').removeClass('active');
-                $('#navbarSupportedContent ul li a').each(function () {
-                    var href = $(this).attr('href');
-                    if (href === path || (path.includes(href) && href !== '/')) {
-                        $(this).parent().addClass('active');
-                    }
-                });
-            }
 
-            // Run the function initially to set the active link
-            updateActiveLink();
-
-            // Responsive navbar animation update
-            function test() {
-                var tabsNewAnim = $('#navbarSupportedContent');
-                var activeItemNewAnim = tabsNewAnim.find('.active');
-                var activeWidthNewAnimHeight = activeItemNewAnim.innerHeight();
-                var activeWidthNewAnimWidth = activeItemNewAnim.innerWidth();
-                var itemPosNewAnimTop = activeItemNewAnim.position();
-                var itemPosNewAnimLeft = activeItemNewAnim.position();
-                $(".hori-selector").css({
-                    "top": itemPosNewAnimTop.top + "px",
-                    "left": itemPosNewAnimLeft.left + "px",
-                    "height": activeWidthNewAnimHeight + "px",
-                    "width": activeWidthNewAnimWidth + "px"
-                });
-            }
-
-            // Update the highlight when the window is resized
-            $(window).on('resize', function () {
-                setTimeout(function () {
-                    test();
-                }, 300);
-            });
-
-            // Update the highlight when the navbar toggler is clicked
-            $(".navbar-toggler").click(function () {
-                $(".navbar-collapse").slideToggle(300);
-                setTimeout(function () {
-                    test();
-                }, 300);
-            });
-
-            // Initial call for animations and updates
-            setTimeout(function () {
-                test();
-            }, 300);
-        });
-    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
