--- a/main_system/templates/layout.html
+++ b/main_system/templates/layout.html
@@ -43,7 +43,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item"><a class="nav-link" href="/home/">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/collection/">Collection</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/products/product/collection/">Collection</a></li>
                     <li class="nav-item"><a class="nav-link" href="/about/">About us</a></li>
                     <li class="nav-item"><a class="nav-link" href="/contact/">Contact</a></li>
                 </ul>
