--- a/main_system/templates/main/home.html
+++ b/main_system/templates/main/home.html
@@ -61,7 +61,7 @@
         </div>
     </section>
 
-    <!-- User Comment -->
+    <!-- Client Comment (滑动)-->
     <section class="mb-5">
         <h2 class="text-center">What Our Clients Say</h2>
         <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas tincidunt elit leo.</p>
