--- a/main_system/templates/main/user_change.html
+++ b/main_system/templates/main/user_change.html
@@ -31,7 +31,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            background-image: url('{% static "image/images/forgot password bg.jpg" %}'); 
+            /*background-image: url('{% static "image/images/forgot password bg.jpg" %}'); */
             background-position: center;
             background-repeat: no-repeat;
             background-size: cover;
