--- a/main_system/templates/products/product_list.html
+++ b/main_system/templates/products/product_list.html
@@ -42,8 +42,8 @@
                     </span>
                 </td>
                 <td>
-                    <a href="/operator/product/list/<int:product_id>/edit/" class="btn btn-warning btn-sm">Edit</a>
-                    <a href="/operator/product/list/<int:product_id>/delete/" class="btn btn-danger btn-sm"
+                    <a href="/operator/product/list/{{  product.id }}/edit/" class="btn btn-warning btn-sm">Edit</a>
+                    <a href="/operator/product/list/{{  product.id }}/delete/" class="btn btn-danger btn-sm"
                        onclick="return confirm('Are you sure you want to delete this product?');">
                         Delete
                     </a>
