--- a/main_system/templates/products/product_detail.html
+++ b/main_system/templates/products/product_detail.html
@@ -21,11 +21,12 @@
             </p>
 
             <!-- 购买按钮 -->
-            <form method="POST" action="{% url 'add_to_cart' product.id %}">
+{#        #{% url 'add_to_cart' product.id %}#}
+            <form method="POST" action="#"> 
                 {% csrf_token %}
                 <label for="quantity">数量：</label>
                 <select id="quantity" name="quantity" class="form-select w-25 mb-3">
-                    {% for i in range(1, product.stock|add:1) %}
+                    {% for i in quantity_range %}
                         <option value="{{ i }}">{{ i }}</option>
                     {% endfor %}
                 </select>
@@ -33,7 +34,7 @@
                 {% if product.stock > 0 %}
                     <button type="submit" class="btn btn-primary">Add To Cart</button>
                 {% else %}
-                    <button type="button" class="btn btn-secondary" disabled>Out Of Sock</button>
+                    <button type="button" class="btn btn-secondary" disabled>Out Of Stock</button>
                 {% endif %}
             </form>
         </div>
