--- a/main_system/templates/operation/operator.html
+++ b/main_system/templates/operation/operator.html
@@ -13,7 +13,7 @@
                         <a class="nav-link active text-white" id="manage-users-btn" href="#">Manage Users</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" id="manage-products-btn" href="#">Manage Products</a>
+                        <a class="nav-link text-white" id="manage-products-btn" href="/operator/product/list/">Manage Products</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-white" id="manage-admins-btn" href="#">Manage Admins</a>
