--- a/main_system/templates/products/product_list_add.html
+++ b/main_system/templates/products/product_list_add.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "operator_layout.html" %}
 
 {% block content %}
     <div class="container-fluid mt-5 d-flex justify-content-center">
