--- a/main_system/templates/login/customer_login.html
+++ b/main_system/templates/login/customer_login.html
@@ -184,14 +184,14 @@
 
         <button class="login-btn" type="submit">Login</button>
 
-        <p class="signup-link">Don't have an account? <a href="#">Sign up</a></p>
+        <p class="signup-link">Don't have an account? <a href="{% url "customer_register" %}">Sign up</a></p>
       </form>
     </div>
 
     <!-- 右侧：图片 -->
     <div class="right-panel">
       <!-- 你可以直接使用图片标签 -->
-      <!-- <img src="/static/images/login-image.jpg" alt="Login Illustration"> -->
+      <img src="/media/login_image/customer_login.jpg" > 
     </div>
 
   </div>
