--- a/main_system/templates/login/customer_register.html
+++ b/main_system/templates/login/customer_register.html
@@ -179,14 +179,14 @@
 
         <button class="signup-btn" type="submit">Sign in</button>
 
-        <p class="login-link">Already have an account? <a href="#">Log in</a></p>
+        <p class="login-link">Already have an account? <a href="{% url "customer_login" %}">Log in</a></p>
       </form>
     </div>
 
     <!-- 右侧：图片 -->
     <div class="right-panel">
       <!-- 你可以直接使用图片标签 -->
-      <!-- <img src=> -->
+      <img src="/media/login_image/customer_register.jpg">
     </div>
 
   </div>
