--- a/main_system/templates/login/user_login.html
+++ b/main_system/templates/login/user_login.html
@@ -191,7 +191,8 @@
     <!-- 右侧：图片 -->
     <div class="right-panel">
       <!-- 你可以直接使用图片标签 -->
-      <img src="/media/login_image/customer_login.jpg" > 
+      <img src="/static/image/liugou.jpg" >
+{#        /media/login_image/customer_login.jpg#}
     </div>
 
   </div>
