--- a/main_system/templates/login/user_register.html
+++ b/main_system/templates/login/user_register.html
@@ -178,7 +178,9 @@
     <!-- 右侧：图片 -->
     <div class="right-panel">
       <!-- 你可以直接使用图片标签 -->
-      <img src="/media/login_image/customer_register.jpg">
+{#        /static/image/liugou.jpg#}
+{#        /media/login_image/customer_register.jpg#}
+      <img src="/static/image/liugou2.jpg">
     </div>
 
   </div>
