--- a/main_system/templates/login/user_login.html
+++ b/main_system/templates/login/user_login.html
@@ -164,6 +164,9 @@
 
       <form method="POST">
         {% csrf_token %}
+        {% if next %}
+          <input type="hidden" name="next" value="{{ next }}">
+        {% endif %}
         
         <label for="account">Account</label>
         <input type="text" name="account" id="account" placeholder="Enter your account" required>
