--- a/main_system/templates/layout.html
+++ b/main_system/templates/layout.html
@@ -55,17 +55,16 @@
                     {% if request.session.customer_info %}
                         <a class="nav-link" href="/customer/cart/">
                             <i class="fas fa-shopping-cart"></i>
-                            <span class="badge bg-dark">{{ request.user.user_cart.first.total_items|default:"0" }}</span>
                         </a>
                         <div class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 {{ request.session.customer_info.name }}
                             </a>
                             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="{% url 'profile' %}">个人中心</a></li>
-                                <li><a class="dropdown-item" href="{% url 'orders' %}">我的订单</a></li>
+                                <li><a class="dropdown-item" href="/customer/profile/">Profile</a></li>
+                                <li><a class="dropdown-item" href="/customer/order/">My orders</a></li>
                                 <li><hr class="dropdown-divider"></li>
-                                <li><a class="dropdown-item" href="{% url 'logout' %}">退出登录</a></li>
+                                <li><a class="dropdown-item" href="#">Log out</a></li>
                             </ul>
                         </div>
                     {% else %}
@@ -76,6 +75,18 @@
             </div>
         </div>
     </nav>
+
+    <!-- Messages -->
+    {% if messages %}
+    <div class="container mt-3">
+        {% for message in messages %}
+        <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+            {{ message }}
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+        {% endfor %}
+    </div>
+    {% endif %}
 
     <div class="container my-4">
         {% block content %}{% endblock %}
