--- a/main_system/templates/main/home.html
+++ b/main_system/templates/main/home.html
@@ -54,7 +54,7 @@
                                 <h5 class="card-title">{{ product.name }}</h5>
                             </a>
                             <p class="card-text">${{ product.price }}</p>
-                            <form action="/cart/cart/{{ product.id }}/add/" method="POST">
+                            <form action="/customer/cart/{{ product.id }}/add/" method="POST">
                                 {% csrf_token %}
                                 <button type="submit" class="btn btn-dark">Add to Cart</button>
                             </form>
