--- a/main_system/templates/products/product_detail.html
+++ b/main_system/templates/products/product_detail.html
@@ -26,7 +26,7 @@
                 <p class="card-text">{{ product.description }}</p>
                 <p class="price mb-3">£{{ product.price }}</p>
                 
-                <form action="/customer/cart/{{ product_id }}/add/" method="POST" class="mb-3">
+                <form action="/customer/cart/{{ product.id }}/add/" method="POST" class="mb-3">
                     {% csrf_token %}
                     <div class="d-flex align-items-center mb-3">
                         <label for="quantity" class="me-2">数量:</label>
